[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Objects/Center/Center.gd" type="Script" id=1]

[node name="Center" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
shrink = true

[node name="Walls" type="StaticBody2D" parent="." index="0" groups=[
"Wall",
]]

input_pickable = false
collision_layer = 1
collision_mask = 19
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Poly" type="CollisionPolygon2D" parent="Walls" index="0"]

pause_mode = 1
scale = Vector2( 2, 2 )
build_mode = 0
polygon = PoolVector2Array( 0, -68, -24, -64, -48, -48, -64, -24, -68, 0, -64, 24, -48, 48, -24, 64, 0, 68, 24, 64, 48, 48, 64, 24, 68, 0, 64, -24, 48, -48, 24, -64, 0, -68, 0, -120, 120, 0, 0, 120, -120, 0, 0, -120 )
_sections_unfolded = [ "Pause", "Transform" ]

[node name="StopTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="PickupTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="SpawnTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="GrowTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]

[connection signal="timeout" from="PickupTimer" to="." method="_on_PickupTimer_timeout"]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[connection signal="timeout" from="GrowTimer" to="." method="_on_GrowTimer_timeout"]


